# now-playing

./: .env.example  .gitignore  Cargo.toml  README.md  railpack.json
apps/NowPlaying/NowPlaying/: AppState.swift  Info.plist  NowPlayingApp.swift
apps/NowPlaying/NowPlaying.xcodeproj/: project.pbxproj
apps/NowPlaying/NowPlaying.xcodeproj/xcshareddata/xcschemes/: NowPlaying.xcscheme
apps/NowPlaying/NowPlaying/API/: ApiClient.swift  Models.swift
apps/NowPlaying/NowPlaying/Agent/: PlaybackSnapshot.swift  SyncEngine.swift
apps/NowPlaying/NowPlaying/Config/: AgentConfig.swift  ConfigStore.swift
apps/NowPlaying/NowPlaying/Music/: AppleMusicProvider.swift
apps/NowPlaying/NowPlaying/Services/: LogService.swift  LoginItemService.swift
apps/NowPlaying/NowPlaying/UI/: LiquidGlassModifiers.swift  PreferencesView.swift
apps/NowPlaying/Resources/: config.example.toml
apps/api/: Cargo.toml
apps/api/src/: auth.rs  error.rs  handlers.rs  main.rs  routes.rs  state.rs  svg.rs
apps/mac-agent/: Cargo.toml
apps/mac-agent/bundle/: Info.plist
apps/mac-agent/src/: agent.rs  api_client.rs  config.rs  config_store.rs  gl_window.rs  lib.rs  login_item.rs  main.rs  preferences.rs  tray.rs
crates/music-provider/: Cargo.toml
crates/music-provider/src/: apple_music.rs  error.rs  lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
scripts/: build-mac-agent.sh
src/: colors.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs  svg.rs
