[package]
name = "mac-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mac-agent"
path = "src/main.rs"

[dependencies]
shared-types = { workspace = true }
music-provider = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
