[package]
name = "mac-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mac_agent"
path = "src/lib.rs"

[[bin]]
name = "mac-agent"
path = "src/main.rs"

[dependencies]
shared-types = { workspace = true }
music-provider = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
base64 = { workspace = true }
toml = "0.8"
directories = "6"
tokio-util = { version = "0.7", features = ["rt"] }
tracing-appender = "0.2"
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.21"
winit = { version = "0.30", features = ["rwh_06"] }
egui = "0.31"
egui-winit = "0.31"
egui_glow = { version = "0.31", features = ["winit"] }
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.16"
raw-window-handle = "0.6"
auto-launch = "0.5"

[package.metadata.packager]
product-name = "Now Playing"
identifier = "com.nowplaying.agent"
before-packaging-command = "cargo build --release -p mac-agent"
resources = ["resources/config.example.toml"]
icons = ["assets/icon.icns"]

[package.metadata.packager.macos]
minimum-system-version = "11.0"
info-plist-path = "bundle/Info.plist"
